--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
               ABENG LY JORDAN
             </span>
           </a>
-          <div class="profile-picture">
-            <img src="./images/slider-img.jpg">
+          <div>
+            <img id="profilepic" src="images/slider-img.jpg" alt="">
           </div>
           <div class="carousel slide slider_text_carousel" data-ride="carousel">
             <div class="carousel-inner">
@@ -296,8 +296,7 @@
             <p>
               Passionné par la cause de l'environnement, la santé ,sécurité et sûreté au travail et avec un amour pour la mode la fashion et l'art .je suis étudiant dévoué en ingenieurie, je suis en deuxième année du cycle ingénieure et en quête d'un stage de 3 mois pour enrichir mon savoir-faire et mettre en pratique mes connaissances et compétences. Mes domaines de prédilection sont la gestion de risque en environnement, la maintenance des réglementationse t normes ISO . Avec mon dynamismeet mon sens desresponsabilités je suis prêt à apporter ma contribution àvotre équipe et á challenger tout obstacle.
             </p>
-            <a href="">
-              
+            <iframe src="./cv/cv.pdf" width="100%" height="500px"> </iframe>
             </a>
           </div>
         </div>
