--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
             <div class="box">
               <div class="client_id">
                 <div class="img-box">
-                  <img src="images/client-img1.jpg" alt="">
+                  <img src="images/client-img2.jpg" alt="">
                 </div>
                 <div class="client_detail">
                   <h5>
@@ -573,7 +573,33 @@
             <div class="box">
               <div class="client_id">
                 <div class="img-box">
-                  <img src="images/client-img2.jpg" alt="">
+                  <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSClMRwFTU8U2ePut6Lj_nPSYi0I2tA9rTa8g&usqp=CAU"
+                    alt="">
+                </div>
+                <div class="client_detail">
+                  <h5>
+                    Liberec
+                  </h5>
+                  <h6>
+                    (Technical university of Liberec)
+                  </h6>
+                </div>
+              </div>
+              <div class="client_text">
+                <p>
+                  IngénieureG R E ( Gestion des Risques et Environnement)
+                  ESAIP (Ecole d'ingénieure), Angers formation mettanten avant l'évaluation, la prévention ,sécurité et
+                  sûretéau travail.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="client_id">
+                <div class="img-box">
+                  <img src="images/client-img1.jpg" alt="">
                 </div>
                 <div class="client_detail">
                   <h5>
