--- a/index.html
+++ b/index.html
@@ -692,13 +692,13 @@
                   25 rue celestin port
                 </span>
               </a>
-              <a href="">
+              <a href="tel:0620981457">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
                   Call +33 6 20 98 14 57
                 </span>
               </a>
-              <a href="">
+              <a href="mailto:abenglyjordan44@gmail.com">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
                   abenglyjordan44@gmail.com
