--- a/index.html
+++ b/index.html
@@ -375,12 +375,12 @@
           Competences
         </h2>
         <p>
-          analyse environnementale
-          • mise à jour de DUERP
-          • Mise en conformitéISO14001,9001,45001
+          Analyse environnementale
+          • Mise à jour de DUERP
+          • Mise en conformité Norme ISO 14001,9001,45001
           • Audite ninterne
-          • Analyseaccidentd utravail
-          • Mise à jour des plans d'évacuation etdes BAES
+          • Analyse accident du travail
+          • Mise à jour des plans d'évacuation et des BAES
           • Animation et communication sur la sécurité en entreprise • Gestion des déchets
           • Veille réglementaire
           • Bilan Carbon
@@ -397,7 +397,7 @@
                 Animateur QSE
               </h5>
               <p>
-                mélioration culture sécurité, prévention des risques, gestion des déchets indutriels
+                Amélioration culture sécurité, prévention des risques, gestion des déchets indutriels
               </p>
               <a href="">
 
@@ -452,7 +452,7 @@
                 Consultant risques
               </h5>
               <p>
-                prévenir les différents types de risques liés à la situation de travail et d'améliorer la qualité de vie
+                Prévenir les différents types de risques liés à la situation de travail et d'améliorer la qualité de vie
                 au travail.
               </p>
               <a href="">
