add space and word

--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
               </h2>
             </div>
             <p>
-              Passionné par la cause de l'environnement, la santé ,sécurité et sûreté au travail et avec un amour pour
-              la mode la fashion et l'art .je suis étudiant dévoué en ingenieurie, je suis en deuxième année du cycle
+              Passionné par la cause de l'environnement, la santé ,sécurité et sûreté au travail
+              .je suis étudiant dévoué en ingenieurie, en deuxième année du cycle
               ingénieure et en quête d'un stage de 3 mois pour enrichir mon savoir-faire et mettre en pratique mes
               connaissances et compétences. Mes domaines de prédilection sont la gestion de risque en environnement, la
-              maintenance des réglementationse t normes ISO . Avec mon dynamismeet mon sens desresponsabilités je suis
-              prêt à apporter ma contribution àvotre équipe et á challenger tout obstacle.
+              maintenance des réglementations et normes ISO . Avec mon dynamisme et mon sens des responsabilités je suis
+              prêt à apporter ma contribution à votre équipe et á challenger tout obstacle.
             </p>
             <iframe src="./cv/cv.pdf" width="100%" height="500px"> </iframe>
             </a>
@@ -337,9 +337,9 @@
               </h2>
             </div>
             <p>
-              GERANT de ligne de production ELIVIA, Angers
-              agencement systématique d'équipements, de machines et d e travailleurs, avec des matières premières
-              entrant d'un côté et d e s produits finis sortant de l'autre, subissant simultanément plusieurs étapes de
+              Pilote de ligne de production ELIVIA, Angers
+              agencement systématique d'équipements, de machines et de travailleurs, avec des matières premières
+              entrant d'un côté et des produits finis sortant de l'autre, subissant simultanément plusieurs étapes de
               traitement ou d'assemblage pour la production.
             </p>
             <a href="">
