--- a/service.html
+++ b/service.html
@@ -117,9 +117,14 @@
         </h2>
         <p>
 
-          Analyse environnementale • Mise à jour de DUERP • Mise en conformité Normes ISO 14001,9001,45001 • Audite
-          interne • Analyseaccident du travail • Mise à jour des plans d'évacuation et des BAES • Animation et
-          communication sur la sécurité en entreprise • Gestion des déchets • Veille réglementaire • Bilan Carbon
+          Analyse environnementale
+          • Mise à jour de DUERP
+          • Mise en conformité Normes ISO 14001,9001,45001
+          • Audite interne
+          • Analyseaccident du travail
+          • Mise à jour des plans d'évacuation et des BAES • Animation et communication sur la sécurité en entreprise
+          • Gestion des déchets • Veille réglementaire
+          • Bilan Carbon
         </p>
       </div>
       <div class="row">
