modify compétence section

--- a/service.html
+++ b/service.html
@@ -115,17 +115,18 @@
         <h2>
           Competences
         </h2>
-        <p>
-
-          Analyse environnementale
-          • Mise à jour de DUERP
-          • Mise en conformité Normes ISO 14001,9001,45001
-          • Audite interne
-          • Analyseaccident du travail
-          • Mise à jour des plans d'évacuation et des BAES • Animation et communication sur la sécurité en entreprise
-          • Gestion des déchets • Veille réglementaire
-          • Bilan Carbon
-        </p>
+        <p>Analyse environnementale</p>
+        <ul>
+          <li>Mise à jour de DUERP</li>
+          <li>Mise en conformité Normes ISO 14001,9001,45001</li>
+          <li>Audite interne</li>
+          <li>Analyseaccident du travail</li>
+          <li>Mise à jour des plans d'évacuation et des BAES</li>
+          <li>Animation et communication sur la sécurité en entreprise</li>
+          <li>Gestion des déchets</li>
+          <li>Veille réglementaire</li>
+          <li>Bilan Carbon</li>
+        </ul>
       </div>
       <div class="row">
         <div class="col-md-6 col-lg-3">
