--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               maintenance des réglementations et normes ISO . Avec mon dynamisme et mon sens des responsabilités je suis
               prêt à apporter ma contribution à votre équipe et á challenger tout obstacle.
             </p>
-            <iframe src="./cv/cv.pdf" width="100%" height="500px"> </iframe>
+            <iframe src="./doc/cv.pdf" width="100%" height="500px"> </iframe>
             </a>
           </div>
         </div>
