--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
             <a class="active" href="index.html">
               ACCEUIL
             </a>
-            <a class="" href="about.html">
+            <a class="" href="#about">
               A propos de moi
             </a>
-            <a class="" href="service.html">
+            <a class="" href="#formation">
               Competences / Experiences
             </a>
-            <a class="" href="testimonial.html">
+            <a class="" href="#association">
+              Parcours associatif
+            </a>
+            <a class="" href="#parcours">
               Formations
             </a>
-            <a class="" href="news.html">
-              Mise à jour
-            </a>
-            <a class="" href="contact.html">
+            <a class="" href="#contactSection">
               Me joindre
             </a>
           </div>
@@ -197,13 +197,16 @@
           <div class="carousel slide slider_image_carousel carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/slider-img.jpg" alt="">
+                <img src="images/imgslide4.jpg" alt="">
               </div>
               <div class="carousel-item">
-                <img src="images/slider-img2.jpg" alt="">
+                <img src="images/imgslide3.jpeg" alt="">
               </div>
               <div class="carousel-item">
-                <img src="images/slider-img3.jpg" alt="">
+                <img src="images/imgslide2.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img src="images/imgslide1.jpg" alt="">
               </div>
             </div>
           </div>
@@ -284,7 +287,7 @@
 
   <!-- about section -->
 
-  <section class="about_section layout_padding">
+  <section id="about" class="about_section layout_padding">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -368,7 +371,7 @@
 
   <!-- we do section -->
 
-  <section class="wedo_section layout_padding">
+  <section id="formation" class="wedo_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -470,23 +473,19 @@
 
   <!-- news section -->
 
-  <section class="news_section layout_padding-bottom">
+  <section id="association" class="news_section layout_padding-bottom">
     <div class="container">
       <div class="heading_container">
         <h2>
-          En savoir plus
+          Expériences associatives
         </h2>
-        <p>
-          Content here, content here', making it look like readable English. Many desktop publishing packages and web
-          page editors now
-        </p>
       </div>
       <div class="row">
         <div class="col-lg-6 ">
           <div class="detail_container">
             <div class="detail-box">
               <h4>
-                Publishing packages Web page
+                Distributeur Bénévole
               </h4>
               <div class="news_social">
                 <a href="">
@@ -509,11 +508,8 @@
                 </a>
               </div>
               <p>
-                College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
-                passage, and going through the cites of the word in classical literature, discovered the
-                undoubtableCollege in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
-                Ipsum passage, and going through the cites of the word in classical literature, discovered the
-                undoubtable
+                RESTAURANT DE COEUR, ANGERS Depuis février 2023
+                Bénévole aux Restos du Cœur chargé de la distribution des repas 1 fois
               </p>
             </div>
             <div class="btn-box">
@@ -537,7 +533,7 @@
 
   <!-- client section -->
 
-  <section class="client_section layout_padding">
+  <section id="parcours" class="client_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
@@ -677,7 +673,7 @@
 
   <!-- info section -->
 
-  <section class="info_section layout_padding2">
+  <section id="contactSection" class="info_section layout_padding2">
     <div class="container">
       <div class="row">
         <div class="col-md-3">
@@ -713,8 +709,7 @@
             <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a
-              href="https://www.linkedin.com/in/ly-jordan-abeng-ovono-279506260?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
+            <a href="https://www.linkedin.com/in/ly-jordan-abeng-ovono-279506260/">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
             <a href="https://instagram.com/lyjordan44?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr">
