--- a/news.html
+++ b/news.html
@@ -15,7 +15,8 @@
   <title>zoom in ly</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -115,7 +116,8 @@
           Latest News
         </h2>
         <p>
-          Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now
+          Content here, content here', making it look like readable English. Many desktop publishing packages and web
+          page editors now
         </p>
       </div>
       <div class="row">
@@ -146,12 +148,16 @@
                 </a>
               </div>
               <p>
-                College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtableCollege in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable
+                College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
+                passage, and going through the cites of the word in classical literature, discovered the
+                undoubtableCollege in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem
+                Ipsum passage, and going through the cites of the word in classical literature, discovered the
+                undoubtable
               </p>
             </div>
             <div class="btn-box">
               <a href="">
-                
+
               </a>
             </div>
           </div>
@@ -176,7 +182,7 @@
         <div class="col-md-3">
           <div class="info_contact">
             <h4>
-              Address
+              Adresse
             </h4>
             <div class="contact_link_box">
               <a href="">
@@ -185,13 +191,13 @@
                   25 rue celestin port
                 </span>
               </a>
-              <a href="">
+              <a href="tel:0620981457">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
                   Call +33 6 20 98 14 57
                 </span>
               </a>
-              <a href="">
+              <a href="mailto:abenglyjordan44@gmail.com">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
                   abenglyjordan44@gmail.com
@@ -200,16 +206,17 @@
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a
+              href="https://www.linkedin.com/in/ly-jordan-abeng-ovono-279506260?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://instagram.com/lyjordan44?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -220,23 +227,23 @@
               Links
             </h4>
             <div class="info_links">
-              <a class="" href="index.html">
+              <a class="active" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
                 Acceuil
               </a>
               <a class="" href="about.html">
                 <img src="images/nav-bullet.png" alt="">
-                A propos de moi
+                A Propos de moi
               </a>
               <a class="" href="service.html">
                 <img src="images/nav-bullet.png" alt="">
-                Competences
+                compétences
               </a>
               <a class="" href="testimonial.html">
                 <img src="images/nav-bullet.png" alt="">
-                Formations
+                Formation
               </a>
-              <a class="active" href="news.html">
+              <a class="" href="news.html">
                 <img src="images/nav-bullet.png" alt="">
                 Latest News
               </a>
@@ -294,7 +301,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
 </body>
 
