--- a/service.html
+++ b/service.html
@@ -218,7 +218,7 @@
         <div class="col-md-3">
           <div class="info_contact">
             <h4>
-              Address
+              Adresse
             </h4>
             <div class="contact_link_box">
               <a href="">
@@ -227,13 +227,13 @@
                   25 rue celestin port
                 </span>
               </a>
-              <a href="">
+              <a href="tel:0620981457">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
                   Call +33 6 20 98 14 57
                 </span>
               </a>
-              <a href="">
+              <a href="mailto:abenglyjordan44@gmail.com">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
                   abenglyjordan44@gmail.com
@@ -242,16 +242,17 @@
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a
+              href="https://www.linkedin.com/in/ly-jordan-abeng-ovono-279506260?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://instagram.com/lyjordan44?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -262,21 +263,21 @@
               Links
             </h4>
             <div class="info_links">
-              <a class="" href="index.html">
+              <a class="active" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
                 Acceuil
               </a>
               <a class="" href="about.html">
                 <img src="images/nav-bullet.png" alt="">
-                A propos de moi
+                A Propos de moi
               </a>
-              <a class="active" href="service.html">
+              <a class="" href="service.html">
                 <img src="images/nav-bullet.png" alt="">
-                Competences
+                compétences
               </a>
               <a class="" href="testimonial.html">
                 <img src="images/nav-bullet.png" alt="">
-                Formations
+                Formation
               </a>
               <a class="" href="news.html">
                 <img src="images/nav-bullet.png" alt="">
