--- a/testimonial.html
+++ b/testimonial.html
@@ -15,14 +15,16 @@
   <title>Seomark</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <!-- fonts awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,,600,700|Poppins:400,500,700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,,600,700|Poppins:400,500,700&display=swap"
+    rel="stylesheet" />
 
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet" />
@@ -113,7 +115,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Formations /Parcours
+          formatons et Parcours
         </h2>
       </div>
       <div class="carousel-wrap ">
@@ -122,22 +124,21 @@
             <div class="box">
               <div class="client_id">
                 <div class="img-box">
-                  <img src="images/client-img1.jpg" alt="">
+                  <img src="images/client-img2.jpg" alt="">
                 </div>
                 <div class="client_detail">
                   <h5>
                     Diplome DUES
                   </h5>
                   <h6>
-                    sup management
+                    (sup management)
                   </h6>
                 </div>
               </div>
               <div class="client_text">
                 <p>
                   Diplomé DUES (Diplome universitaires d'étude scientifiques)
-MATH SUP'(sup management), libreville (GABON) formation PREPA ( MPSI -MP) formation
-                  
+                  , libreville (GABON) formation PREPA ( MPSI-MP) formation
                 </p>
               </div>
             </div>
@@ -146,7 +147,33 @@ MATH SUP'(sup management), libreville (GABON) formation PREPA ( MPSI -MP) format
             <div class="box">
               <div class="client_id">
                 <div class="img-box">
-                  <img src="images/client-img2.jpg" alt="">
+                  <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSClMRwFTU8U2ePut6Lj_nPSYi0I2tA9rTa8g&usqp=CAU"
+                    alt="">
+                </div>
+                <div class="client_detail">
+                  <h5>
+                    Liberec
+                  </h5>
+                  <h6>
+                    (Technical university of Liberec)
+                  </h6>
+                </div>
+              </div>
+              <div class="client_text">
+                <p>
+                  Ingénieure GRE (Gestion des Risques et Environnement)
+                  ESAIP (Ecole d'ingénieure), Angers formation mettanten avant l'évaluation, la prévention ,sécurité et
+                  sûretéau travail.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="box">
+              <div class="client_id">
+                <div class="img-box">
+                  <img src="images/client-img1.jpg" alt="">
                 </div>
                 <div class="client_detail">
                   <h5>
@@ -159,9 +186,10 @@ MATH SUP'(sup management), libreville (GABON) formation PREPA ( MPSI -MP) format
               </div>
               <div class="client_text">
                 <p>
-                  ngénieureG R E ( Gestion des Risques et Environnement)
-ESAIP (Ecole d'ingénieure), Angers formation mettanten avant l'évaluation, la prévention ,sécurité et sûretéau travail.
-                  
+                  Ingénieure GRE (Gestion des Risques et Environnement)
+                  ESAIP (Ecole d'ingénieure), Angers formation mettant en avant l'évaluation, la prévention ,sécurité et
+                  sûretéau travail.
+
                 </p>
               </div>
             </div>
@@ -181,7 +209,7 @@ ESAIP (Ecole d'ingénieure), Angers formation mettanten avant l'évaluation, la 
         <div class="col-md-3">
           <div class="info_contact">
             <h4>
-              Address
+              Adresse
             </h4>
             <div class="contact_link_box">
               <a href="">
@@ -190,13 +218,13 @@ ESAIP (Ecole d'ingénieure), Angers formation mettanten avant l'évaluation, la 
                   25 rue celestin port
                 </span>
               </a>
-              <a href="">
+              <a href="tel:0620981457">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
                   Call +33 6 20 98 14 57
                 </span>
               </a>
-              <a href="">
+              <a href="mailto:abenglyjordan44@gmail.com">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
                   abenglyjordan44@gmail.com
@@ -205,16 +233,17 @@ ESAIP (Ecole d'ingénieure), Angers formation mettanten avant l'évaluation, la 
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a
+              href="https://www.linkedin.com/in/ly-jordan-abeng-ovono-279506260?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://instagram.com/lyjordan44?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -225,21 +254,21 @@ ESAIP (Ecole d'ingénieure), Angers formation mettanten avant l'évaluation, la 
               Links
             </h4>
             <div class="info_links">
-              <a class="" href="index.html">
+              <a class="active" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
                 Acceuil
               </a>
               <a class="" href="about.html">
                 <img src="images/nav-bullet.png" alt="">
-                A propos de moi
+                A Propos de moi
               </a>
               <a class="" href="service.html">
                 <img src="images/nav-bullet.png" alt="">
-                Competences
+                compétences
               </a>
-              <a class="active" href="testimonial.html">
+              <a class="" href="testimonial.html">
                 <img src="images/nav-bullet.png" alt="">
-                Formations
+                Formation
               </a>
               <a class="" href="news.html">
                 <img src="images/nav-bullet.png" alt="">
@@ -299,7 +328,8 @@ ESAIP (Ecole d'ingénieure), Angers formation mettanten avant l'évaluation, la 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
 </body>
 
