--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
   <title>zoom in ly</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -65,7 +66,7 @@
               Latest News
             </a>
             <a class="" href="contact.html">
-              Me contacter 
+              Me contacter
             </a>
           </div>
         </div>
@@ -119,12 +120,17 @@
               </h2>
             </div>
             <p>
-              Passionné par la cause de l'environnement, la santé ,sécurité et sûreté au travail et avec un amour pour la mode la fashion et l'art .je suis étudiant dévoué en ingenieurie, je suis en deuxième année du cycle ingénieure et en quête d'un stage de 3 mois pour enrichir mon savoir-faire et mettre en pratique mes connaissances et compétences. Mes domaines de prédilection sont la gestion de risque en environnement, la maintenance des réglementationse t normes ISO . Avec mon dynamismeet mon sens desresponsabilités je suis prêt à apporter ma contribution àvotre équipe et á challenger tout obstacle.
+              Passionné par la cause de l'environnement, la santé ,sécurité et sûreté au travail et avec un amour pour
+              la mode la fashion et l'art .je suis étudiant dévoué en ingenieurie, je suis en deuxième année du cycle
+              ingénieure et en quête d'un stage de 3 mois pour enrichir mon savoir-faire et mettre en pratique mes
+              connaissances et compétences. Mes domaines de prédilection sont la gestion de risque en environnement, la
+              maintenance des réglementationse t normes ISO . Avec mon dynamismeet mon sens desresponsabilités je suis
+              prêt à apporter ma contribution àvotre équipe et á challenger tout obstacle.
 
 
             </p>
             <a href="">
-              
+
             </a>
           </div>
         </div>
@@ -153,7 +159,7 @@
         <div class="col-md-3">
           <div class="info_contact">
             <h4>
-              Address
+              Adresse
             </h4>
             <div class="contact_link_box">
               <a href="">
@@ -162,13 +168,13 @@
                   25 rue celestin port
                 </span>
               </a>
-              <a href="">
+              <a href="tel:0620981457">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
                   Call +33 6 20 98 14 57
                 </span>
               </a>
-              <a href="">
+              <a href="mailto:abenglyjordan44@gmail.com">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
                   abenglyjordan44@gmail.com
@@ -177,16 +183,17 @@
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a
+              href="https://www.linkedin.com/in/ly-jordan-abeng-ovono-279506260?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://instagram.com/lyjordan44?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -197,21 +204,21 @@
               Links
             </h4>
             <div class="info_links">
-              <a class="" href="index.html">
+              <a class="active" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
                 Acceuil
               </a>
-              <a class="active" href="about.html">
+              <a class="" href="about.html">
                 <img src="images/nav-bullet.png" alt="">
-                A propos de moi
+                A Propos de moi
               </a>
               <a class="" href="service.html">
                 <img src="images/nav-bullet.png" alt="">
-                competences
+                compétences
               </a>
               <a class="" href="testimonial.html">
                 <img src="images/nav-bullet.png" alt="">
-                Formations
+                Formation
               </a>
               <a class="" href="news.html">
                 <img src="images/nav-bullet.png" alt="">
@@ -271,7 +278,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
 </body>
 
