--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,8 @@
   <title>ZOOM IN LY</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -161,7 +162,7 @@
         <div class="col-md-3">
           <div class="info_contact">
             <h4>
-              Address
+              Adresse
             </h4>
             <div class="contact_link_box">
               <a href="">
@@ -170,13 +171,13 @@
                   25 rue celestin port
                 </span>
               </a>
-              <a href="">
+              <a href="tel:0620981457">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
                   Call +33 6 20 98 14 57
                 </span>
               </a>
-              <a href="">
+              <a href="mailto:abenglyjordan44@gmail.com">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
                   abenglyjordan44@gmail.com
@@ -185,16 +186,17 @@
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=100070890453588">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a
+              href="https://www.linkedin.com/in/ly-jordan-abeng-ovono-279506260?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://instagram.com/lyjordan44?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -205,27 +207,27 @@
               Links
             </h4>
             <div class="info_links">
-              <a class="" href="index.html">
+              <a class="active" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
                 Acceuil
               </a>
               <a class="" href="about.html">
                 <img src="images/nav-bullet.png" alt="">
-                A propos de moi
+                A Propos de moi
               </a>
               <a class="" href="service.html">
                 <img src="images/nav-bullet.png" alt="">
-                Competences
+                compétences
               </a>
               <a class="" href="testimonial.html">
                 <img src="images/nav-bullet.png" alt="">
-                Formations
+                Formation
               </a>
               <a class="" href="news.html">
                 <img src="images/nav-bullet.png" alt="">
                 Latest News
               </a>
-              <a class="active" href="contact.html">
+              <a class="" href="contact.html">
                 <img src="images/nav-bullet.png" alt="">
                 Me contacter
               </a>
@@ -279,7 +281,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap"></script>
   <!-- End Google Map -->
 </body>
 
