--- a/index.html
+++ b/index.html
@@ -185,11 +185,13 @@
           </div>
 
           <div class="btn-box">
-            <a href="" class="btn-1">
-              Contact me
+            <a class="slider_btn_prev btn-1" href="" role="button" data-slide="prev">
+              <i class="fa fa-angle-left" aria-hidden="true"></i>
+              <span class="sr-only">Previous</span>
             </a>
-            <a href="" class="btn-2">
-
+            <a class="slider_btn_next btn-1" href="" role="button" data-slide="next">
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
+              <span class="sr-only">Next</span>
             </a>
           </div>
         </div>
@@ -229,58 +231,6 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <div class="container-fluid service_container">
-      <div class="row">
-        <div class="col-lg-3 col-sm-6">
-          <div class="box">
-            <div class="number_box">
-              <h5>
-                01
-              </h5>
-            </div>
-            <h4>
-              Research Project
-            </h4>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <div class="box">
-            <div class="number_box">
-              <h5>
-                02
-              </h5>
-            </div>
-            <h4>
-              Find Ideas
-            </h4>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <div class="box">
-            <div class="number_box">
-              <h5>
-                03
-              </h5>
-            </div>
-            <h4>
-              Start Optimize
-            </h4>
-          </div>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-          <div class="box">
-            <div class="number_box">
-              <h5>
-                04
-              </h5>
-            </div>
-            <h4>
-              Reach Target
-            </h4>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
 
   <!-- end feature section -->
@@ -305,8 +255,8 @@
               maintenance des réglementations et normes ISO . Avec mon dynamisme et mon sens des responsabilités je suis
               prêt à apporter ma contribution à votre équipe et á challenger tout obstacle.
             </p>
+            <a href="./doc/cv.pdf" download="cv.pdf">Download the pdf</a>
             <iframe src="./doc/cv.pdf" width="100%" height="500px"> </iframe>
-            </a>
           </div>
         </div>
         <div class="col-md-6">
