--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               A propos de moi
             </a>
             <a class="" href="#formation">
-              Competences / Experiences
+              Competénces / Experiences
             </a>
             <a class="" href="#association">
               Parcours associatif
@@ -249,9 +249,10 @@
             </div>
             <p>
               Passionné par la cause de l'environnement, la santé ,sécurité et sûreté au travail
-              .je suis étudiant dévoué en ingenieurie, en deuxième année du cycle
+              .je suis étudiant dévoué en ingénierie, en dernière année du cycle
               ingénieure et en quête d'un stage de 3 mois pour enrichir mon savoir-faire et mettre en pratique mes
-              connaissances et compétences. Mes domaines de prédilection sont la gestion de risque en environnement, la
+              connaissances et compétences. Mes domaines de prédilection sont la gestion des risques en environnement,
+              la
               maintenance des réglementations et normes ISO . Avec mon dynamisme et mon sens des responsabilités je suis
               prêt à apporter ma contribution à votre équipe et á challenger tout obstacle.
             </p>
@@ -325,19 +326,19 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Competences
+          Compétences
         </h2>
         <p>Analyse environnementale</p>
         <ul>
           <li>Mise à jour de DUERP</li>
           <li>Mise en conformité Normes ISO 14001,9001,45001</li>
-          <li>Audite interne</li>
-          <li>Analyseaccident du travail</li>
+          <li>Audit interne</li>
+          <li>Analyse accident du travail</li>
           <li>Mise à jour des plans d'évacuation et des BAES</li>
           <li>Animation et communication sur la sécurité en entreprise</li>
           <li>Gestion des déchets</li>
           <li>Veille réglementaire</li>
-          <li>Bilan Carbon</li>
+          <li>Bilan Carbone</li>
         </ul>
       </div>
       <div class="row">
@@ -351,7 +352,7 @@
                 Animateur QSE
               </h5>
               <p>
-                Amélioration culture sécurité, prévention des risques, gestion des déchets indutriels
+                Amélioration culture sécurité, prévention des risques, gestion des déchets industriels
               </p>
               <a href="">
 
@@ -387,7 +388,8 @@
                 Animateur HSE
               </h5>
               <p>
-                prévention, à la protection de la santé et à la sécurité des personnels, dans le respect de la
+                Prévention des personnels, à la protection de la santé et à la sécurité des personnels, dans le respect
+                de la
                 réglementation ,contrôle l'application de la législation et de ses préconisations.
               </p>
               <a href="">
@@ -406,7 +408,7 @@
                 Consultant risques
               </h5>
               <p>
-                Prévenir les différents types de risques liés à la situation de travail et d'améliorer la qualité de vie
+                Prévenir les différents types de risques liés à la situation du travail et d'améliorer la qualité de vie
                 au travail.
               </p>
               <a href="">
@@ -458,8 +460,8 @@
                 </a>
               </div>
               <p>
-                RESTAURANT DE COEUR, ANGERS Depuis février 2023
-                Bénévole aux Restos du Cœur chargé de la distribution des repas 1 fois
+                RESTAURANT DU COEUR, ANGERS Depuis février 2023
+                Bénévole aux Restos du Cœur chargé de la distribution des repas 1 fois par semaine
               </p>
             </div>
             <div class="btn-box">
@@ -487,7 +489,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          formatons et Parcours
+          Formations et Parcours
         </h2>
       </div>
       <div class="carousel-wrap ">
@@ -500,7 +502,7 @@
                 </div>
                 <div class="client_detail">
                   <h5>
-                    Diplome DUES
+                    Diplôme DUES
                   </h5>
                   <h6>
                     (sup management)
@@ -509,7 +511,7 @@
               </div>
               <div class="client_text">
                 <p>
-                  Diplomé DUES (Diplome universitaires d'étude scientifiques)
+                  Diplômé DUES (Diplôme universitaire d'études scientifiques)
                   , libreville (GABON) formation PREPA ( MPSI-MP) formation
                 </p>
               </div>
@@ -534,8 +536,8 @@
               </div>
               <div class="client_text">
                 <p>
-                  Ingénieure GRE (Gestion des Risques et Environnement)
-                  ESAIP (Ecole d'ingénieure), Angers formation mettanten avant l'évaluation, la prévention ,sécurité et
+                  Ingénieur GRE (Gestion des Risques et Environnement)
+                  ESAIP (Ecole d'ingénieur), Angers formation mettant en avant l'évaluation, la prévention ,sécurité et
                   sûretéau travail.
                 </p>
               </div>
@@ -558,9 +560,9 @@
               </div>
               <div class="client_text">
                 <p>
-                  Ingénieure GRE (Gestion des Risques et Environnement)
-                  ESAIP (Ecole d'ingénieure), Angers formation mettant en avant l'évaluation, la prévention ,sécurité et
-                  sûretéau travail.
+                  Ingénieur GRE (Gestion des Risques et Environnement)
+                  ESAIP (Ecole d'ingénieur), Angers formation mettant en avant l'évaluation, la prévention ,sécurité et
+                  sûreté au travail.
 
                 </p>
               </div>
